--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <script src="js/Control.OSMGeocoder.js"></script>
         <script src="js/leaflet-search.js"></script>
         <script src="data/WardApplicabilityoutof50.js"></script>
-        <script src="data/TargetComunities1.js"></script>
+        <script src="data/OuterRingRoad1.js"></script>
+        <script src="data/TargetComunities2.js"></script>
         <script>
         var highlightLayer;
         function highlightFeature(e) {
@@ -46,8 +47,8 @@
               });
             } else {
               highlightLayer.setStyle({
-                fillColor: '#9B9B9B',
-                fillOpacity: 0
+                fillColor: '#ffff00',
+                fillOpacity: 1
               });
             }
         }
@@ -107,65 +108,65 @@
                 return {
                 pane: 'pane_WardApplicabilityoutof50',
                 opacity: 1,
-                color: 'rgba(0,0,0,0.8)',
+                color: 'rgba(0,0,0,0.5)',
                 dashArray: '',
                 lineCap: 'butt',
                 lineJoin: 'miter',
                 weight: 1.0, 
                 fillOpacity: 1,
-                fillColor: 'rgba(255,255,255,0.8)',
+                fillColor: 'rgba(255,255,255,0.5)',
             }
             }
             if (feature.properties['Ward Applicability (out of 5):'] >= 1.000000 && feature.properties['Ward Applicability (out of 5):'] <= 2.000000 ) {
                 return {
                 pane: 'pane_WardApplicabilityoutof50',
                 opacity: 1,
-                color: 'rgba(0,0,0,0.8)',
+                color: 'rgba(0,0,0,0.5)',
                 dashArray: '',
                 lineCap: 'butt',
                 lineJoin: 'miter',
                 weight: 1.0, 
                 fillOpacity: 1,
-                fillColor: 'rgba(193,223,230,0.8)',
+                fillColor: 'rgba(193,223,230,0.5)',
             }
             }
             if (feature.properties['Ward Applicability (out of 5):'] >= 2.000000 && feature.properties['Ward Applicability (out of 5):'] <= 3.000000 ) {
                 return {
                 pane: 'pane_WardApplicabilityoutof50',
                 opacity: 1,
-                color: 'rgba(0,0,0,0.8)',
+                color: 'rgba(0,0,0,0.5)',
                 dashArray: '',
                 lineCap: 'butt',
                 lineJoin: 'miter',
                 weight: 1.0, 
                 fillOpacity: 1,
-                fillColor: 'rgba(132,192,205,0.8)',
+                fillColor: 'rgba(132,192,205,0.5)',
             }
             }
             if (feature.properties['Ward Applicability (out of 5):'] >= 3.000000 && feature.properties['Ward Applicability (out of 5):'] <= 4.000000 ) {
                 return {
                 pane: 'pane_WardApplicabilityoutof50',
                 opacity: 1,
-                color: 'rgba(0,0,0,0.8)',
+                color: 'rgba(0,0,0,0.5)',
                 dashArray: '',
                 lineCap: 'butt',
                 lineJoin: 'miter',
                 weight: 1.0, 
                 fillOpacity: 1,
-                fillColor: 'rgba(70,161,180,0.8)',
+                fillColor: 'rgba(70,161,180,0.5)',
             }
             }
             if (feature.properties['Ward Applicability (out of 5):'] >= 4.000000 && feature.properties['Ward Applicability (out of 5):'] <= 5.000000 ) {
                 return {
                 pane: 'pane_WardApplicabilityoutof50',
                 opacity: 1,
-                color: 'rgba(0,0,0,0.8)',
+                color: 'rgba(0,0,0,0.5)',
                 dashArray: '',
                 lineCap: 'butt',
                 lineJoin: 'miter',
                 weight: 1.0, 
                 fillOpacity: 1,
-                fillColor: 'rgba(9,130,155,0.8)',
+                fillColor: 'rgba(9,130,155,0.5)',
             }
             }
         }
@@ -180,7 +181,47 @@
     });
         bounds_group.addLayer(layer_WardApplicabilityoutof50);
         map.addLayer(layer_WardApplicabilityoutof50);
-        function pop_TargetComunities1(feature, layer) {
+        function pop_OuterRingRoad1(feature, layer) {
+            layer.on({
+                mouseout: function(e) {
+                    for (i in e.target._eventParents) {
+                        e.target._eventParents[i].resetStyle(e.target);
+                    }
+                },
+                mouseover: highlightFeature,
+            });
+            var popupContent = '<table>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['Name'] !== null ? Autolinker.link(String(feature.properties['Name'])) : '') + '</td>\
+                    </tr>\
+                </table>';
+            layer.bindPopup(popupContent);
+        }
+
+        function style_OuterRingRoad1_0() {
+            return {
+                pane: 'pane_OuterRingRoad1',
+                opacity: 1,
+                color: 'rgba(0,0,0,1.0)',
+                dashArray: '',
+                lineCap: 'square',
+                lineJoin: 'bevel',
+                weight: 2.0,
+                fillOpacity: 0,
+            }
+        }
+        map.createPane('pane_OuterRingRoad1');
+        map.getPane('pane_OuterRingRoad1').style.zIndex = 401;
+        map.getPane('pane_OuterRingRoad1').style['mix-blend-mode'] = 'normal';
+    var layer_OuterRingRoad1 = new L.geoJson(json_OuterRingRoad1, {
+        attribution: '<a href=""></a>',
+        pane: 'pane_OuterRingRoad1',
+        onEachFeature: pop_OuterRingRoad1,
+        style: style_OuterRingRoad1_0,
+    });
+        bounds_group.addLayer(layer_OuterRingRoad1);
+        map.addLayer(layer_OuterRingRoad1);
+        function pop_TargetComunities2(feature, layer) {
             layer.on({
                 mouseout: function(e) {
                     for (i in e.target._eventParents) {
@@ -210,11 +251,11 @@
             layer.bindPopup(popupContent);
         }
 
-        function style_TargetComunities1_0(feature) {
+        function style_TargetComunities2_0(feature) {
             switch(feature.properties['Group'].toString()) {
                 case 'Pure Paani':
                     return {
-                pane: 'pane_TargetComunities1',
+                pane: 'pane_TargetComunities2',
                 radius: 4.0,
                 opacity: 1,
                 color: 'rgba(0,0,0,1.0)',
@@ -228,7 +269,7 @@
                     break;
                 case 'Sow Phillips':
                     return {
-                pane: 'pane_TargetComunities1',
+                pane: 'pane_TargetComunities2',
                 radius: 4.0,
                 opacity: 1,
                 color: 'rgba(0,0,0,1.0)',
@@ -242,23 +283,23 @@
                     break;
             }
         }
-        map.createPane('pane_TargetComunities1');
-        map.getPane('pane_TargetComunities1').style.zIndex = 401;
-        map.getPane('pane_TargetComunities1').style['mix-blend-mode'] = 'normal';
-        var layer_TargetComunities1 = new L.geoJson(json_TargetComunities1, {
+        map.createPane('pane_TargetComunities2');
+        map.getPane('pane_TargetComunities2').style.zIndex = 402;
+        map.getPane('pane_TargetComunities2').style['mix-blend-mode'] = 'normal';
+        var layer_TargetComunities2 = new L.geoJson(json_TargetComunities2, {
             attribution: '<a href=""></a>',
-            pane: 'pane_TargetComunities1',
-            onEachFeature: pop_TargetComunities1,
+            pane: 'pane_TargetComunities2',
+            onEachFeature: pop_TargetComunities2,
             pointToLayer: function (feature, latlng) {
                 var context = {
                     feature: feature,
                     variables: {}
                 };
-                return L.circleMarker(latlng, style_TargetComunities1_0(feature));
+                return L.circleMarker(latlng, style_TargetComunities2_0(feature));
             },
         });
-        bounds_group.addLayer(layer_TargetComunities1);
-        map.addLayer(layer_TargetComunities1);
+        bounds_group.addLayer(layer_TargetComunities2);
+        map.addLayer(layer_TargetComunities2);
         var osmGeocoder = new L.Control.OSMGeocoder({
             collapsed: false,
             position: 'topright',
@@ -266,10 +307,10 @@
         });
         osmGeocoder.addTo(map);
         var baseMaps = {};
-        L.control.layers(baseMaps,{'Target Comunities<br /><table><tr><td style="text-align: center;"><img src="legend/TargetComunities1_PurePaani0.png" /></td><td>Pure Paani</td></tr><tr><td style="text-align: center;"><img src="legend/TargetComunities1_SowPhillips1.png" /></td><td>Sow Phillips</td></tr></table>': layer_TargetComunities1,'Ward Applicability (out of 5)<br /><table><tr><td style="text-align: center;"><img src="legend/WardApplicabilityoutof50_110.png" /></td><td> 1 - 1</td></tr><tr><td style="text-align: center;"><img src="legend/WardApplicabilityoutof50_121.png" /></td><td> 1 - 2</td></tr><tr><td style="text-align: center;"><img src="legend/WardApplicabilityoutof50_232.png" /></td><td> 2 - 3</td></tr><tr><td style="text-align: center;"><img src="legend/WardApplicabilityoutof50_343.png" /></td><td> 3 - 4</td></tr><tr><td style="text-align: center;"><img src="legend/WardApplicabilityoutof50_454.png" /></td><td> 4 - 5</td></tr></table>': layer_WardApplicabilityoutof50,}).addTo(map);
+        L.control.layers(baseMaps,{'Target Comunities<br /><table><tr><td style="text-align: center;"><img src="legend/TargetComunities2_PurePaani0.png" /></td><td>Pure Paani</td></tr><tr><td style="text-align: center;"><img src="legend/TargetComunities2_SowPhillips1.png" /></td><td>Sow Phillips</td></tr></table>': layer_TargetComunities2,'<img src="legend/OuterRingRoad1.png" /> Outer Ring Road': layer_OuterRingRoad1,'Ward Applicability (out of 5)<br /><table><tr><td style="text-align: center;"><img src="legend/WardApplicabilityoutof50_110.png" /></td><td> 1 - 1</td></tr><tr><td style="text-align: center;"><img src="legend/WardApplicabilityoutof50_121.png" /></td><td> 1 - 2</td></tr><tr><td style="text-align: center;"><img src="legend/WardApplicabilityoutof50_232.png" /></td><td> 2 - 3</td></tr><tr><td style="text-align: center;"><img src="legend/WardApplicabilityoutof50_343.png" /></td><td> 3 - 4</td></tr><tr><td style="text-align: center;"><img src="legend/WardApplicabilityoutof50_454.png" /></td><td> 4 - 5</td></tr></table>': layer_WardApplicabilityoutof50,}).addTo(map);
         setBounds();
         map.addControl(new L.Control.Search({
-            layer: layer_TargetComunities1,
+            layer: layer_TargetComunities2,
             initial: false,
             hideMarkerOnCollapse: true,
             propertyName: 'Name'}));
