--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <link rel="stylesheet" href="css/leaflet.css"><link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"><link rel="stylesheet" href="css/L.Control.Locate.min.css">
+        <link rel="stylesheet" href="css/leaflet.css"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"><link rel="stylesheet" href="css/L.Control.Locate.min.css">
         <link rel="stylesheet" href="css/qgis2web.css">
         <link rel="stylesheet" href="css/leaflet-search.css">
         <style>
@@ -45,8 +45,8 @@
               });
             } else {
               highlightLayer.setStyle({
-                fillColor: '#ffff00',
-                fillOpacity: 0
+                fillColor: '#9B9B9B',
+                fillOpacity: 1
               });
             }
         }
@@ -57,11 +57,6 @@
         map.attributionControl.addAttribution('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a>');
         L.control.locate().addTo(map);
         var bounds_group = new L.featureGroup([]);
-        var basemap0 = L.tileLayer('http://{s}.www.toolserver.org/tiles/bw-mapnik/{z}/{x}/{y}.png', {
-            attribution: '&copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>',
-            maxZoom: 28
-        });
-        basemap0.addTo(map);
         function setBounds() {
             if (bounds_group.getLayers().length) {
                 map.fitBounds(bounds_group.getBounds());
@@ -101,65 +96,65 @@
                 return {
                 pane: 'pane_Wards0',
                 opacity: 1,
-                color: 'rgba(0,0,0,0.7)',
+                color: 'rgba(0,0,0,1.0)',
                 dashArray: '',
                 lineCap: 'butt',
                 lineJoin: 'miter',
                 weight: 1.0, 
                 fillOpacity: 1,
-                fillColor: 'rgba(255,255,255,0.7)',
+                fillColor: 'rgba(255,255,255,1.0)',
             }
             }
             if (feature.properties['Focus Factor (out of 5)'] >= 1.000000 && feature.properties['Focus Factor (out of 5)'] <= 2.000000 ) {
                 return {
                 pane: 'pane_Wards0',
                 opacity: 1,
-                color: 'rgba(0,0,0,0.7)',
+                color: 'rgba(0,0,0,1.0)',
                 dashArray: '',
                 lineCap: 'butt',
                 lineJoin: 'miter',
                 weight: 1.0, 
                 fillOpacity: 1,
-                fillColor: 'rgba(193,223,230,0.7)',
+                fillColor: 'rgba(193,223,230,1.0)',
             }
             }
             if (feature.properties['Focus Factor (out of 5)'] >= 2.000000 && feature.properties['Focus Factor (out of 5)'] <= 3.000000 ) {
                 return {
                 pane: 'pane_Wards0',
                 opacity: 1,
-                color: 'rgba(0,0,0,0.7)',
+                color: 'rgba(0,0,0,1.0)',
                 dashArray: '',
                 lineCap: 'butt',
                 lineJoin: 'miter',
                 weight: 1.0, 
                 fillOpacity: 1,
-                fillColor: 'rgba(132,192,205,0.7)',
+                fillColor: 'rgba(132,192,205,1.0)',
             }
             }
             if (feature.properties['Focus Factor (out of 5)'] >= 3.000000 && feature.properties['Focus Factor (out of 5)'] <= 4.000000 ) {
                 return {
                 pane: 'pane_Wards0',
                 opacity: 1,
-                color: 'rgba(0,0,0,0.7)',
+                color: 'rgba(0,0,0,1.0)',
                 dashArray: '',
                 lineCap: 'butt',
                 lineJoin: 'miter',
                 weight: 1.0, 
                 fillOpacity: 1,
-                fillColor: 'rgba(70,161,180,0.7)',
+                fillColor: 'rgba(70,161,180,1.0)',
             }
             }
             if (feature.properties['Focus Factor (out of 5)'] >= 4.000000 && feature.properties['Focus Factor (out of 5)'] <= 5.000000 ) {
                 return {
                 pane: 'pane_Wards0',
                 opacity: 1,
-                color: 'rgba(0,0,0,0.7)',
+                color: 'rgba(0,0,0,1.0)',
                 dashArray: '',
                 lineCap: 'butt',
                 lineJoin: 'miter',
                 weight: 1.0, 
                 fillOpacity: 1,
-                fillColor: 'rgba(9,130,155,0.7)',
+                fillColor: 'rgba(9,130,155,1.0)',
             }
             }
         }
